--- a/Source/Compiler/Parser/Parser.fsproj
+++ b/Source/Compiler/Parser/Parser.fsproj
@@ -64,8 +64,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="FSharp.Core">
-      <HintPath>..\..\..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\FSharp\.NETFramework\v4.0\4.3.1.0\FSharp.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
