--- a/Source/Compiler/ILCompiler/ILCompiler.fsproj
+++ b/Source/Compiler/ILCompiler/ILCompiler.fsproj
@@ -51,6 +51,8 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="ILExpr.fs" />
+    <Compile Include="ILFunction.fs" />
     <Compile Include="ILCompiler.fs" />
     <Content Include="packages.config" />
   </ItemGroup>
@@ -60,6 +62,18 @@
       <Project>{b6779f23-850e-41a6-bd55-c60ea21dc1e3}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <Reference Include="ExcelDna.Integration">
+      <HintPath>..\..\..\packages\ExcelDna.Integration.0.33.9\lib\ExcelDna.Integration.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="FParsec">
+      <HintPath>..\..\..\packages\FParsec.1.0.2\lib\net40-client\FParsec.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="FParsecCS">
+      <HintPath>..\..\..\packages\FParsec.1.0.2\lib\net40-client\FParsecCS.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FSharp.Core">
       <HintPath>..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
       <Private>True</Private>
