--- a/Source/Compiler/AST/AST.fsproj
+++ b/Source/Compiler/AST/AST.fsproj
@@ -6,15 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\AST\AST.fsproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Compile Include="Parser.fs" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="FParsec" Version="1.1.1" />
+        <Compile Include="Ast.fs" />
     </ItemGroup>
 
 </Project>
