--- a/Source/Compiler/ILCompiler/ILCompiler.fsproj
+++ b/Source/Compiler/ILCompiler/ILCompiler.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net481</TargetFramework>
+        <TargetFramework>net6.0-windows</TargetFramework>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
@@ -12,15 +12,15 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="ExcelDna.AddIn" Version="1.6.0" />
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\AST\AST.fsproj" />
       <ProjectReference Include="..\Compiler\AST\AST.fsproj" />
       <ProjectReference Include="..\Compiler\Compiler.fsproj" />
       <ProjectReference Include="..\Compiler\Compiler\Compiler.fsproj" />
       <ProjectReference Include="..\Parser\Parser.fsproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="ExcelDna.AddIn" Version="1.6.0" />
     </ItemGroup>
 
 </Project>
